[package]
name = "ssh-keygen"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
ssh-key = { version = "0.6", features = ["ed25519", "std"] }
memchr = "2.7"
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"], optional = true }
rand = "0.8"
num_cpus = "1.16"
ctrlc = "3.4"

[[bin]]
name = "ssh-keygen"
path = "main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3